--- a/src/app.html
+++ b/src/app.html
@@ -30,7 +30,7 @@
 			})(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 		</script>
 
-		
+		<noscript>Your browser does not support JavaScript!</noscript>
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="skeleton">
 		<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
